# rmtfar

./: .gitignore  Cargo.toml  README.md  check.sh  cliff.toml  install-plugin.sh  rust-toolchain.toml  setup-mumble.sh
.cargo/: config.toml
.cursor/plans/: rmtfar_mumble_radio_3346fea1.plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dep-audit.yml  release.yml
addon/: CfgFunctions.hpp  CfgRscTitles.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp
addon/functions/: fn_buildStatePayload.sqf  fn_cbaKeybindHasUserKeys.sqf  fn_cycleChannelActive.sqf  fn_cycleIntercomChannel.sqf  fn_cycleStereoActive.sqf  fn_debugCycleFreq.sqf  fn_debugGhostClear.sqf  fn_debugGhostSpawn.sqf  fn_debugGhostToggleTransmit.sqf  fn_debugToggle.sqf  fn_escapeJsonString.sqf  fn_getPlayerState.sqf  fn_hudStart.sqf  fn_init.sqf  fn_loadProfileSettings.sqf  fn_loop.sqf  fn_playRadioSquelch.sqf  fn_radioTransmit.sqf  fn_radioTransmitActive.sqf  fn_radioTransmitAdditional.sqf  fn_radioTransmitLR.sqf  fn_resolveRadioModel.sqf  fn_saveProfileSettings.sqf  fn_sendState.sqf  fn_setChannelActive.sqf  fn_setFrequency.sqf  fn_setFrequencyLR.sqf  fn_setRadioCodeActive.sqf  fn_setStereoActive.sqf  fn_toggleActiveRadio.sqf  fn_toggleIntercom.sqf  fn_toggleIntercomDebug.sqf
arma-mod/@rmtfar/: mod.cpp
arma-mod/@rmtfar/addons/rmtfar/: $PBOPREFIX$  CfgFunctions.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp
arma-mod/@rmtfar/addons/rmtfar/functions/: fn_getPlayerState.sqf  fn_init.sqf  fn_loop.sqf  fn_resolveRadioModel.sqf  fn_sendState.sqf
crates/rmtfar-bridge/: Cargo.toml
crates/rmtfar-bridge/src/: main.rs  mumble_link.rs  radio.rs  state.rs
crates/rmtfar-bridge/tests/: integration.rs
crates/rmtfar-extension/: Cargo.toml
crates/rmtfar-extension/src/: lib.rs  mumble_link.rs  sender.rs  state.rs
crates/rmtfar-plugin/: Cargo.toml
crates/rmtfar-plugin/src/: audio.rs  dsp.rs  ffi.rs  lib.rs  state.rs  tests.rs
crates/rmtfar-protocol/: Cargo.toml
crates/rmtfar-protocol/src/: lib.rs
crates/rmtfar-test-client/: Cargo.toml
crates/rmtfar-test-client/src/: main.rs
docs/: architecture.md  building.md  protocol.md  setup-guide.md  windows-ghost-test.md  windows-testing.md
scripts/: build-all.sh  build-bridge-windows.sh  build-extension.sh  build-linux.sh  build-plugin-linux.sh  build-plugin.sh  build-windows.sh  pack-pbo.sh  package-plugin-linux.sh  package-release.sh
