[workspace]
members = [
    "crates/rmtfar-protocol",
    "crates/rmtfar-extension",
    "crates/rmtfar-bridge",
    "crates/rmtfar-plugin",
    "crates/rmtfar-test-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "GPL-3.0"
repository = "https://github.com/cavazquez/rmtfar"
authors = ["RMTFAR Contributors"]

[workspace.dependencies]
rmtfar-protocol = { path = "crates/rmtfar-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
