[package]
name = "rmtfar-extension"
description = "Arma 3 extension DLL for RMTFAR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rmtfar"
crate-type = ["cdylib"]

[dependencies]
rmtfar-protocol = { path = "../rmtfar-protocol" }

# serde_json is not needed: the extension forwards raw JSON bytes from SQF as-is
