[package]
name = "rmtfar-extension"
description = "Arma 3 extension DLL for RMTFAR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rmtfar"
crate-type = ["cdylib"]

[dependencies]
rmtfar-protocol = { path = "../rmtfar-protocol" }
serde_json.workspace = true
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
] }
