[package]
name = "rmtfar-extension"
description = "Arma 3 extension DLL for RMTFAR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "rmtfar"
crate-type = ["cdylib"]

[dependencies]
rmtfar-protocol = { path = "../rmtfar-protocol" }
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
