[package]
name = "rmtfar-test-client"
description = "Test client that simulates an Arma 3 player for RMTFAR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rmtfar-test-client"
path = "src/main.rs"

[dependencies]
rmtfar-protocol.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
